feat(docs): add new documentation files for authentication and deployment
This commit introduces several new documentation files to enhance the resources available for developers. Key additions include:

1. New guides on front-end login request encryption and exposing APIs directly.
2. Documentation on Fastjson security vulnerabilities and recommended fixes.
3. A guide for integrating email sending capabilities with Pig.
4. Instructions for deploying applications using Rainbond.

These updates aim to provide comprehensive support for developers using the Pig4Cloud platform, improving the overall documentation experience.

--- a/docs/生产部署/Rainbond部署整套应用.mdx
+++ b/docs/生产部署/Rainbond部署整套应用.mdx
@@ -1,51 +1,47 @@
+---
+title: "Rainbond部署整套应用"
+---
+
 ## 简介
-[Rainbond ](https://www.rainbond.com)<font style="color:rgb(28, 30, 33);">是一个云原生应用管理平台，使用简单，不需要懂容器、Kubernetes和底层复杂技术，支持管理多个Kubernetes集群，和管理企业应用全生命周期。主要功能包括应用开发环境、应用市场、微服务架构、应用交付、应用运维、应用级多云管理等。</font>
 
+[Rainbond](https://www.rainbond.com) 是一个云原生应用管理平台，使用简单，不需要懂容器、Kubernetes和底层复杂技术，支持管理多个Kubernetes集群，和管理企业应用全生命周期。主要功能包括应用开发环境、应用市场、微服务架构、应用交付、应用运维、应用级多云管理等。
 
-
-[Rainbond是什么？](https://www.rainbond.com/docs/)
-
-
+<Card title="了解更多" icon="link" href="https://www.rainbond.com/docs/">
+  Rainbond是什么？
+</Card>
 
 ## 前提条件
 
-
-+ 拥有一套Rainbond环境。请参考官方文档 [快速安装rainbond](https://www.rainbond.com/docs/quick-start/quick-install/)
-+ 硬件：CPU：4核，内存：16G
-
-
+- 拥有一套Rainbond环境。请参考官方文档 [快速安装rainbond](https://www.rainbond.com/docs/quick-start/quick-install/)
+- 硬件：CPU：4核，内存：16G
 
 ## 快速部署 Spring Cloud Pig
 
-
 ### 1. 基于应用市场创建
-
 
 新增 > 基于应用市场创建组件 > 在Rainbond开源商店中搜索 **Pig** 进行安装。
 
-
-
-![](https://cdn.nlark.com/yuque/0/2022/png/2614916/1668950643590-3a733637-1d1c-4e1b-8024-5ad46bcd4622.png)
-
-
+![Rainbond应用市场](https://cdn.nlark.com/yuque/0/2022/png/2614916/1668950643590-3a733637-1d1c-4e1b-8024-5ad46bcd4622.png)
 
 等待数秒后，访问pig-ui查看页面
 
+**最终效果**：
 
+![部署效果1](https://cdn.nlark.com/yuque/0/2022/png/2614916/1668950664531-41019cf2-9454-4e4e-8e07-538755df3bc6.png)
 
-**最终效果** ：![](https://cdn.nlark.com/yuque/0/2022/png/2614916/1668950664531-41019cf2-9454-4e4e-8e07-538755df3bc6.png)
-
-
-
-![](https://cdn.nlark.com/yuque/0/2022/png/2614916/1654655167647-b2cef5cf-1a0d-429a-b258-04c61d83a8ee.png)
-
-
+![部署效果2](https://cdn.nlark.com/yuque/0/2022/png/2614916/1654655167647-b2cef5cf-1a0d-429a-b258-04c61d83a8ee.png)
 
 ## 使用源码在 Rainbond 上部署
-+ 参考 [文档](https://www.rainbond.com/docs/micro-service/example/pig) 部署：[https://www.rainbond.com/docs/micro-service/example/pig](https://www.rainbond.com/docs/micro-service/example/pig)
-+ 观看视频进行部署
 
-
-
-[bilibili](https://player.bilibili.com/player.html?bvid=BV1MZ4y1b7wW)
+<Tabs>
+  <Tab title="文档部署">
+    参考 [文档](https://www.rainbond.com/docs/micro-service/example/pig) 部署：
+    [https://www.rainbond.com/docs/micro-service/example/pig](https://www.rainbond.com/docs/micro-service/example/pig)
+  </Tab>
+  <Tab title="视频教程">
+    观看视频进行部署：
+    
+    [bilibili](https://player.bilibili.com/player.html?bvid=BV1MZ4y1b7wW)
+  </Tab>
+</Tabs>
 
