--- a/docs/整合能力/pig 整合邮件发送.mdx
+++ b/docs/整合能力/pig 整合邮件发送.mdx
@@ -1,18 +1,16 @@
-## 
+---
+title: "Pig 整合邮件发送"
+---
 
+## 简介
 
 我们利用spring-boot的子模块[spring-boot-starter-mail-starter](https://github.com/spring-projects/spring-boot/tree/main/spring-boot-project/spring-boot-starters/spring-boot-starter-mail)就可以方便的进行邮件的整合与发送
 
-
-
 ## 使用
-
 
 通过maven引入以下依赖坐标:
 
-
-
-```plain
+```xml
 <!--spring boot 邮件快速启动器-->
 <dependency>
   <groupId>org.springframework.boot</groupId>
@@ -20,22 +18,16 @@
 </dependency>
 ```
 
-
-
 ## 配置
 
-
-正常情况下，发送 邮件以下四项为必须配置的内容:
+正常情况下，发送邮件以下四项为必须配置的内容:
 
 | 配置项 | 默认值 | 说明 |
 | --- | --- | --- |
-| spring.mail.host | | SMTP 服务器主机。例如，“smtp.example.com” |
+| spring.mail.host | | SMTP 服务器主机。例如，"smtp.example.com" |
 | spring.mail.port | | SMTP 服务器端口 |
 | spring.mail.username | | SMTP 服务器登录用户名 |
 | spring.mail.password | | SMTP 服务器登录密码 |
-
-
-
 
 以下是一些不常用的配置:
 
@@ -45,15 +37,9 @@
 | spring.mail.default-encoding | UTF-8 | 默认 MimeMessage 编码 |
 | spring.mail.jndi-name | | 会话 JNDI 名称。设置后，优先于其他会话设置 |
 
-
-
-
 ## 发送邮件
 
-
 注入`org.springframework.mail.MailSender`对象即可轻松地发送邮件，示例代码如下:
-
-
 
 ```java
 import lombok.RequiredArgsConstructor;
@@ -80,9 +66,12 @@ public class EmailTriggerService {
           log.error("发送邮件出错，错误信息为:[{}]",e.getMessage(),e);
         }
     }
-
 }
 ```
+
+## 问题咨询
+
+如有问题，请通过官方渠道咨询。
 
 ## ❤  问题咨询
 ![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
